external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/colon_colon_incomplete.exp
error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:10:9
   │
10 │         a::
   │         ^ Unexpected address identifier. An address identifier is not a valid expression

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:11:5
   │
11 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:14:9
   │
14 │         a::m::
   │         ^^^^ Unexpected module identifier. A module identifier is not a valid expression

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:15:5
   │
15 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier

error[E03022]: invalid usage position
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:18:9
   │
18 │         a::m::SomeEnum::
   │         ^^^^^^^^^^^^^^^^ Expected a local or constant, but found enum 'SomeEnum' in current scope
   │
   = Enum variants with no arguments must be written as 'SomeEnum::SomeVariant'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:19:5
   │
19 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier

